deploy/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chpassword
  namespace: chpassword
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chpass.inf.uct.cl
    external-dns.alpha.kubernetes.io/target: proxy.inf.uct.cl
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chpass.inf.uct.cl
      secretName: inf-uct-cl-tls
  rules:
    - host: chpass.inf.uct.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
